FW/splpv1.c
/* Generated by re2c 1.3 on Sun Oct  3 21:22:47 2021 */
/* Generated by re2c 1.3 on Sat Oct  2 20:01:46 2021 */
/* Generated by re2c 1.3 on Sat Oct  2 18:13:45 2021 */
/*
  Рагусский Ричард Викторович
  14 группа
*/
/*
  In case of encoding problems:
  Richard Ragusski
  Group 14
*/

/*
---------------------------------------------------------------------------------------------------------------------------
# |      STATE      |         DESCRIPTION       |           ALLOWED MESSAGES            | NEW STATE | EXAMPLE
--+-----------------+---------------------------+---------------------------------------+-----------+----------------------
1 | INIT            | initial state             | A->B     CONNECT                      |     2     |
--+-----------------+---------------------------+---------------------------------------+-----------+----------------------
2 | CONNECTING      | client is waiting for con-| A<-B     CONNECT_OK                   |     3     |
  |                 | nection approval from srv |                                       |           |
--+-----------------+---------------------------+---------------------------------------+-----------+----------------------
3 | CONNECTED       | Connection is established | A->B     GET_VER                      |     4     |
  |                 |                           |        -------------------------------+-----------+----------------------
  |                 |                           |          One of the following:        |     5     |
  |                 |                           |          - GET_DATA                   |           |
  |                 |                           |          - GET_FILE                   |           |
  |                 |                           |          - GET_COMMAND                |           |
  |                 |                           |        -------------------------------+-----------+----------------------
  |                 |                           |          GET_B64                      |     6     |
  |                 |                           |        ------------------------------------------------------------------
  |                 |                           |          DISCONNECT                   |     7     |
--+-----------------+---------------------------+---------------------------------------+-----------+----------------------
4 | WAITING_VER     | Client is waiting for     | A<-B     VERSION ver                  |     3     | VERSION 2
  |                 | server to provide version |          Where ver is an integer (>0) |           |
  |                 | information               |          value. Only a single space   |           |
  |                 |                           |          is allowed in the message    |           |
--+-----------------+---------------------------+---------------------------------------+-----------+----------------------
5 | WAITING_DATA    | Client is waiting for a   | A<-B     CMD data CMD                 |     3     | GET_DATA a GET_DATA
  |                 | response from server      |                                       |           |
  |                 |                           |          CMD - command sent by the    |           |
  |                 |                           |           client in previous message  |           |
  |                 |                           |          data - string which contains |           |
  |                 |                           |           the following allowed cha-  |           |
  |                 |                           |           racters: small latin letter,|           |
  |                 |                           |           digits and '.'              |           |
--+-----------------+---------------------------+---------------------------------------+-----------+----------------------
6 | WAITING_B64_DATA| Client is waiting for a   | A<-B     B64: data                    |     3     | B64: SGVsbG8=
  |                 | response from server.     |          where data is a base64 string|           |
  |                 |                           |          only 1 space is allowed      |           |
--+-----------------+---------------------------+---------------------------------------+-----------+----------------------
7 | DISCONNECTING   | Client is waiting for     | A<-B     DISCONNECT_OK                |     1     |
  |                 | server to close the       |                                       |           |
  |                 | connection                |                                       |           |
---------------------------------------------------------------------------------------------------------------------------

IN CASE OF INVALID MESSAGE THE STATE SHOULD BE RESET TO 1 (INIT)

 A->B: "CONNECT|GET_VER|GET_DATA|GET_FILE|GET_COMMAND|GET_B64|DISCONNECT"
 B-<A: "(CONNECT_OK|VERSION [1,9]|(GET_VER|GET_DATA|GET_FILE|GET_COMMAND|GET_B64) [a-z0-9.]+ (GET_VER|GET_DATA|GET_FILE|GET_COMMAND|GET_B64)|B64: (?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$|DISCONNECT_OK)"

*/
#include <string.h>
#include <ctype.h>

#include "splpv1.h"

int lexFwd(const char *YYCURSOR){
    
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
	case 'C':	goto yy4;
	case 'D':	goto yy5;
	case 'G':	goto yy6;
	default:	goto yy2;
	}
yy2:
	++YYCURSOR;
yy3:
	{ return 0;}
yy4:
	yych = *(YYCURSOR = ++YYCURSOR);
	switch (yych) {
	case 'O':	goto yy7;
	default:	goto yy3;
	}
yy5:
	yych = *(YYCURSOR = ++YYCURSOR);
	switch (yych) {
	case 'I':	goto yy9;
	default:	goto yy3;
	}
yy6:
	yych = *(YYCURSOR = ++YYCURSOR);
	switch (yych) {
	case 'E':	goto yy10;
	default:	goto yy3;
	}
yy7:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy11;
	default:	goto yy8;
	}
yy8:
	YYCURSOR = YYCURSOR;
	goto yy3;
yy9:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy12;
	default:	goto yy8;
	}
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy13;
	default:	goto yy8;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy14;
	default:	goto yy8;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy15;
	default:	goto yy8;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy16;
	default:	goto yy8;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy17;
	default:	goto yy8;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy18;
	default:	goto yy8;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'B':	goto yy19;
	case 'C':	goto yy20;
	case 'D':	goto yy21;
	case 'F':	goto yy22;
	case 'V':	goto yy23;
	default:	goto yy8;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy24;
	default:	goto yy8;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy25;
	default:	goto yy8;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case '6':	goto yy26;
	default:	goto yy8;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy27;
	default:	goto yy8;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy28;
	default:	goto yy8;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':	goto yy29;
	default:	goto yy8;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy30;
	default:	goto yy8;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy31;
	default:	goto yy8;
	}
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy32;
	default:	goto yy8;
	}
yy26:
	yych = *++YYCURSOR;
	switch (yych) {
	case '4':	goto yy33;
	default:	goto yy8;
	}
yy27:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'M':	goto yy34;
	default:	goto yy8;
	}
yy28:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy35;
	default:	goto yy8;
	}
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':	goto yy36;
	default:	goto yy8;
	}
yy30:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy37;
	default:	goto yy8;
	}
yy31:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy38;
	goto yy8;
yy32:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy40;
	default:	goto yy8;
	}
yy33:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy41;
	goto yy8;
yy34:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'M':	goto yy43;
	default:	goto yy8;
	}
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy44;
	default:	goto yy8;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy44;
	default:	goto yy8;
	}
yy37:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy45;
	goto yy8;
yy38:
	++YYCURSOR;
	{ return 2;}
yy40:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy47;
	default:	goto yy8;
	}
yy41:
	++YYCURSOR;
	{ return 6;}
yy43:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy48;
	default:	goto yy8;
	}
yy44:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy49;
	goto yy8;
yy45:
	++YYCURSOR;
	{ return 4;}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy51;
	default:	goto yy8;
	}
yy48:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy52;
	default:	goto yy8;
	}
yy49:
	++YYCURSOR;
	{ return 5;}
yy51:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy53;
	goto yy8;
yy52:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy44;
	default:	goto yy8;
	}
yy53:
	++YYCURSOR;
	{ return 7;}
}

}

int cmd_regex(const char *YYCURSOR){
    
{
	char yych;
	yych = *YYCURSOR;
	switch (yych) {
	case 'B':	goto yy59;
	case 'C':	goto yy60;
	case 'G':	goto yy61;
	case 'V':	goto yy62;
	default:	goto yy57;
	}
yy57:
	++YYCURSOR;
yy58:
	{ return 0;}
yy59:
	yych = *(YYCURSOR = ++YYCURSOR);
	switch (yych) {
	case '6':	goto yy63;
	default:	goto yy58;
	}
yy60:
	yych = *(YYCURSOR = ++YYCURSOR);
	switch (yych) {
	case 'O':	goto yy65;
	default:	goto yy58;
	}
yy61:
	yych = *(YYCURSOR = ++YYCURSOR);
	switch (yych) {
	case 'E':	goto yy66;
	default:	goto yy58;
	}
yy62:
	yych = *(YYCURSOR = ++YYCURSOR);
	switch (yych) {
	case 'E':	goto yy67;
	default:	goto yy58;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
	case '4':	goto yy68;
	default:	goto yy64;
	}
yy64:
	YYCURSOR = YYCURSOR;
	goto yy58;
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy69;
	default:	goto yy64;
	}
yy66:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy70;
	default:	goto yy64;
	}
yy67:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':	goto yy71;
	default:	goto yy64;
	}
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case ':':	goto yy72;
	default:	goto yy64;
	}
yy69:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy73;
	default:	goto yy64;
	}
yy70:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy74;
	default:	goto yy64;
	}
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'S':	goto yy75;
	default:	goto yy64;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy76;
	default:	goto yy64;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy77;
	default:	goto yy64;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy78;
	case 'D':	goto yy79;
	case 'F':	goto yy80;
	default:	goto yy64;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':	goto yy81;
	default:	goto yy64;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy82;
	case '+':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy84;
	default:	goto yy64;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy85;
	default:	goto yy64;
	}
yy78:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy86;
	default:	goto yy64;
	}
yy79:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy87;
	default:	goto yy64;
	}
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':	goto yy88;
	default:	goto yy64;
	}
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy89;
	default:	goto yy64;
	}
yy82:
	++YYCURSOR;
	{ return 3;}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case '+':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy90;
	default:	goto yy64;
	}
yy85:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy91;
	default:	goto yy64;
	}
yy86:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'M':	goto yy92;
	default:	goto yy64;
	}
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy93;
	default:	goto yy64;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':	goto yy94;
	default:	goto yy64;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy95;
	default:	goto yy64;
	}
yy90:
	yych = *++YYCURSOR;
	switch (yych) {
	case '+':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy96;
	case '=':	goto yy97;
	default:	goto yy64;
	}
yy91:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy98;
	default:	goto yy64;
	}
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'M':	goto yy99;
	default:	goto yy64;
	}
yy93:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy100;
	default:	goto yy64;
	}
yy94:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy101;
	default:	goto yy64;
	}
yy95:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy102;
	default:	goto yy64;
	}
yy96:
	yych = *++YYCURSOR;
	switch (yych) {
	case '+':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy76;
	case '=':	goto yy103;
	default:	goto yy64;
	}
yy97:
	yych = *++YYCURSOR;
	switch (yych) {
	case '=':	goto yy103;
	default:	goto yy64;
	}
yy98:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy104;
	default:	goto yy64;
	}
yy99:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy105;
	default:	goto yy64;
	}
yy100:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy106;
	default:	goto yy64;
	}
yy101:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy108;
	default:	goto yy64;
	}
yy102:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy64;
	goto yy111;
yy103:
	yych = *++YYCURSOR;
	if (yych <= 0x00) goto yy82;
	goto yy64;
yy104:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'K':	goto yy103;
	default:	goto yy64;
	}
yy105:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':	goto yy112;
	default:	goto yy64;
	}
yy106:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy113;
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy106;
	default:	goto yy64;
	}
yy108:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy114;
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy108;
	default:	goto yy64;
	}
yy110:
	yych = *++YYCURSOR;
yy111:
	switch (yych) {
	case 0x00:	goto yy82;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy110;
	default:	goto yy64;
	}
yy112:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy115;
	default:	goto yy64;
	}
yy113:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'G':	goto yy116;
	default:	goto yy64;
	}
yy114:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'G':	goto yy117;
	default:	goto yy64;
	}
yy115:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy118;
	default:	goto yy64;
	}
yy116:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy120;
	default:	goto yy64;
	}
yy117:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy121;
	default:	goto yy64;
	}
yy118:
	yych = *++YYCURSOR;
	switch (yych) {
	case ' ':	goto yy122;
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy118;
	default:	goto yy64;
	}
yy120:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy123;
	default:	goto yy64;
	}
yy121:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy124;
	default:	goto yy64;
	}
yy122:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'G':	goto yy125;
	default:	goto yy64;
	}
yy123:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy126;
	default:	goto yy64;
	}
yy124:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy127;
	default:	goto yy64;
	}
yy125:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy128;
	default:	goto yy64;
	}
yy126:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'D':	goto yy129;
	default:	goto yy64;
	}
yy127:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'F':	goto yy130;
	default:	goto yy64;
	}
yy128:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy131;
	default:	goto yy64;
	}
yy129:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':	goto yy132;
	default:	goto yy64;
	}
yy130:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'I':	goto yy133;
	default:	goto yy64;
	}
yy131:
	yych = *++YYCURSOR;
	switch (yych) {
	case '_':	goto yy134;
	default:	goto yy64;
	}
yy132:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy135;
